<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GetMyAlert</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_push">PushActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="strContinue">Continue</string>
    <string name="strSend">Send</string>
    <string name="HeaderActMain">Check the categories:</string>
    <string name="LoadingDialog">Loading. Please wait...</string>
    <string name="NoInternetDialog">No internet conection</string>
    <string name="mnuSuscription">Suscriptions</string>
    <string name="mnuMyAlert">My Alerts</string>
    <string name="mnuNotification">Notifications</string>
    <string name="mnuChat">Chat</string>
    <string name="lblSwctPushOFF">Default</string>
    <string name="lblSwctPushON">Custom</string>
    <string name="OK">YeAh!</string>
    <string name="NOTOK">OUch!</string>
    <string name="lblMsg">MESSAGE</string>
    <string name="lblAD">Url AD</string>
    <string name="lblEND">Url END</string>
    <string name="lblTAG">TAG</string>
    <string name="lblNICK">put your nick:</string>
    <string name="title_activity_splash_anim">SplashAnimActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Nuevos str tras applicar styles -->

    <string name="ggg_headerCategories">Escoge los <b>temas de tu interés</b> para tus notificaciones</string>
    <string name="title_activity_suscription">Suscription Activity</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>
