<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gigigo.asv.testappoxeesdk.PushActivity"
    android:orientation="vertical">

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->

        <!--<TextView-->
            <!--android:id="@+id/LblSwitch"-->
            <!--android:text="@string/lblSwctPushOFF"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->

        <!--<Switch-->
            <!--android:id="@+id/SwctPushForm"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="right"-->
            <!--android:textOn=""-->
            <!--android:textOff=""-->
            <!--android:checked="false"-->
            <!--android:textStyle="bold" />-->
    <!--</LinearLayout>-->

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TabWidget
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@android:id/tabs" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@android:id/tabcontent">
                <LinearLayout
                    android:id="@+id/LayoutDefault"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/CmbRequests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></ListView>
                    <!--Layout Spinner con checkbox-->

                    <Button
                        android:id="@+id/BtnPost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strSend" android:visibility="gone" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/LayoutCustom"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/lblMsg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/TxtMsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/lblAD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/TxtUrlAd"
                        android:text="http://www.publi.com"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/lblEND"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/TxtUrlEnd"
                        android:text="http://www.gigigo.com"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/lblTAG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/TxtTag"
                        android:text="TAG_TITULO"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/BtnPostCustom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strSend" android:visibility="gone"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>
